--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "common-ax",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Common Ax, son utilidades comunes para proyectos TypeScript o Javascript.",
-  "main": "app.ts",
+  "main": "dist/app.js",
+  "types": "dist/app.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "tsc --build",
+    "build": "tsc -p ./tsconfig.json",
+    "build:old": "tsc --build",
     "clean": "tsc --build --clean",
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "prestart": "npm run build",
