--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,27 @@
 {
     "compilerOptions": {
         "lib": [
-            "dom",
-            "es2015",
-            "es2016",
-            "es2017",
-            "es2018"
+            "ES2015",
+            "ES2019",
+            "ES2018"
         ],
-        "module": "commonjs",
         "moduleResolution": "node",
+        "module": "CommonJS",
+        "allowJs": true,
+        "declaration": true,
+        "declarationMap": true,
+        "strict": false,
         "forceConsistentCasingInFileNames": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
-        "noImplicitAny": true,
         "strictNullChecks": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "sourceMap": true,
         "esModuleInterop": true,
+        "noImplicitAny": true,
         "resolveJsonModule": true,
-        "target": "es2018",
+        "target": "ES2018",
         "outDir": "dist",
         "baseUrl": ".",
         "paths": {
@@ -28,11 +30,15 @@
             ]
         }
     },
-    "typeRoots": [
-        "node_modules/@types"
+    "exclude": [
+        "node_modules"
     ],
     "include": [
         "src/**/*",
+        "handlers/*",
         "app.ts"
+    ],
+    "typeRoots": [
+        "./node_modules/@types"
     ]
 }
