--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common-ax",
-  "version": "1.0.9-beta-5",
+  "version": "1.0.9-beta-6",
   "description": "Common Ax, son utilidades comunes para proyectos TypeScript o Javascript.",
   "main": "dist/app.js",
   "types": "dist/app.d.ts",
@@ -52,16 +52,16 @@
     ]
   },
   "dependencies": {
-    "jest": "27.4.3",
-    "@types/jest": "27.0.3",
-    "ts-jest": "27.1.0",
-    "typescript": "^4.4.4",
-    "node-typescript": "^0.1.3",
-    "tslint": "^6.1.3",
     "@types/node": "16.11.12",
     "@aws-sdk/client-dynamodb": "3.52.0",
     "@types/uuid": "^8.3.3",
     "mongodb": "4.5.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "jest": "27.4.3",
+    "@types/jest": "27.0.3",
+    "ts-jest": "27.1.0",
+    "typescript": "^4.6.3",
+    "tslint": "^6.1.3"
+  }
 }
