--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common-ax",
-  "version": "1.0.11-beta-8",
+  "version": "1.0.11-beta-10",
   "description": "Common Ax, son utilidades comunes para proyectos TypeScript o Javascript.",
   "main": "dist/app.js",
   "types": "dist/app.d.ts",
@@ -55,13 +55,13 @@
     "@types/node": "16.11.12",
     "@aws-sdk/client-dynamodb": "3.52.0",
     "@types/uuid": "^8.3.3",
-    "mongodb": "4.5.0"
+    "mongodb": "4.5.0",
+    "tslint": "^6.1.3"
   },
   "devDependencies": {
     "jest": "27.4.3",
     "@types/jest": "27.0.3",
     "ts-jest": "27.1.0",
-    "typescript": "^4.6.3",
-    "tslint": "^6.1.3"
+    "typescript": "^4.6.3"
   }
 }
