--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common-ax",
-  "version": "1.0.11-beta-13",
+  "version": "1.0.11-beta-14",
   "description": "Common Ax, son utilidades comunes para proyectos TypeScript o Javascript.",
   "main": "dist/app.js",
   "types": "dist/app.d.ts",
@@ -56,7 +56,7 @@
     "@aws-sdk/client-dynamodb": "3.52.0",
     "@types/uuid": "^8.3.3",
     "mongodb": "4.5.0",
-    "tslint": "^6.1.3"
+    "tslint": "6.1.3"
   },
   "devDependencies": {
     "jest": "27.4.3",
