--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,9 @@
     "compilerOptions": {
         "lib": [
             "ES2015",
-            "ES2016",
-            "ES2017"
+            "ES2020"
         ],
-        "moduleResolution": "node",
+        "moduleResolution": "Node",
         "module": "CommonJS",
         "allowJs": true,
         "declaration": true,
@@ -21,7 +20,7 @@
         "esModuleInterop": true,
         "noImplicitAny": true,
         "resolveJsonModule": true,
-        "target": "ES2015",
+        "target": "ES2020",
         "outDir": "dist",
         "baseUrl": ".",
         "paths": {
